# valheim-mod-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml
benches/: manifest_formats.rs  search_benchmark.rs
benches/fixtures/: README.md
examples/: generate-fixtures.rs
src/: api.rs  cli.rs  config.rs  error.rs  intern.rs  lib.rs  logs.rs  main.rs  manifest.rs  package.rs  zip.rs
src/commands/: list.rs  mod.rs  search.rs  update.rs
