[package]
name = "valheim-mod-manager"
version = "0.1.0"
edition = "2024"
description = "Mod manager for Valheim game"
authors = ["Endoze <endoze@endozemedia.com>", "LinkTheDot <CirnoStrongest9909@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Endoze/valheim-mod-manager"
documentation = "https://docs.rs/valheim-mod-manager"
homepage = "https://github.com/Endoze/valheim-mod-manager"
rust-version = "1.85.0"

[[bin]]
name = "vmm"
path = "src/main.rs"

[dependencies]
bytes = "1.5"
chrono = "0.4"
config = "0.15"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.3"
futures = "0.3"
indicatif = "0.17"
reqwest = {version = "0.12.14", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
shellexpand = "3.1"
thiserror = "2.0"
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1.32", features = ["full"] }
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
zip = "2.2.3"
bincode = "1.3.3"
zstd = "0.13.0"
fs_extra = "1.3.0"

[dev-dependencies]
tempfile = "3.10.1"
mockito = "1.2.0"
tokio-test = "0.4.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
